--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,9 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
-pod "Dispatcher", :path => "../"
-
-target 'Dispatcher_Example', :exclusive => true do
+target 'Dispatcher_Example' do
+  pod "Dispatcher", :path => "../"
 end
 
-target 'Dispatcher_Tests', :exclusive => true do
-end
+# target 'Dispatcher_Tests', :exclusive => true do
+# end
